# DNA_CNN

./: .gitignore  README.md  generate_non_peak_bed.py  main.py  pyproject.toml
src/: dna_utils.py  load_data.py  model.py  training.py
