[project]
name = "dna-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pysam>=0.23.3",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
